# mad-base

./: README.md
lightmad/lightmad/: LICENSE  communication.py  config.py  llm_interface.py  main.py  pyproject.toml  requirements.txt
lightmad/lightmad/agents/: base_agent.py  simple_agent.py
lightmad/lightmad/tests/: test_agents.py
